--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --exit",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/ispoljari/blog-api-mongoose#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.3.2",
     "morgan": "^1.9.1"
   }
 }
