--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "express": "^4.16.3",
     "mongoose": "^5.3.2",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "faker": "^4.1.0",
+    "mocha": "^5.2.0"
   }
 }
